--- a/data/about.yml
+++ b/data/about.yml
@@ -12,4 +12,4 @@ aboutItem :
 
 - icon : tf-anchor2
   title : We're Solutions
-  content : We capitalize the networking and knowledge of business challenges and to deliver with integrity and passion to provide right structured end to end solutions to corporate and government entities.
+  content : We capitalize the networking and knowledge of business challenges as well as to deliver with integrity and passion to provide right structured end to end solutions to corporate and government entities.
